<?xml version="1.0"?>
<package format="2">
  <name>fisherbrand_pps4102_balance</name>
  <version>1.0.0</version>
  <description>A ROS Driver for Fisher Scientific PPS4102 Balance. Uses RS232-USB to communicate.</description>

  <maintainer email="jglowa@liverpool.ac.uk">Jakub Glowacki</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/driver_pps4102</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
